classDiagram
    direction TB

    class BaseEntity {
        <<abstract>>
        - UUID id
        - LocalDateTime criadoEm

        + BaseEntity()
        + getId() UUID
        + getCriadoEm() LocalDateTime
    }

    class Colaborador {
        <<abstract>>
        - String nome
        - String email
        - String senha
        - TipoColaborador tipo

        + Colaborador(String nome, String email, String senha, TipoColaborador tipo)
        + getNome() String
        + getEmail() String
        + getSenha() String
        + autenticar(String senha) boolean
        + getTipo() TipoColaborador
        + toString() String
    }

    class Vendedor {
        + Vendedor(String nome, String email, String senha)
    }

    class GerenteVendas {
        + GerenteVendas(String nome, String email, String senha)
    }

    class Reuniao {
        - String transcricao
        - Duration duracao
        - LocalDate ocorreuEm
        - GerenteVendas uploadedBy

        + Reuniao(String transcricao, Duration duracao, LocalDate ocorreuEm, GerenteVendas uploadedBy)
        + getTranscricao() String
        + getDuracao() Duration
        + getOcorreuEm() LocalDate
        + getUploadedBy() GerenteVendas
        + toString() String
        + equals(Object o) boolean
    }

    class AnaliseReuniao {
        - String assunto
        - SentimentoReuniao sentimentoReuniao
        - RiscoCancelamento riscoCancelamento
        - SegmentoCliente segmentoCliente
        - ProdutoTotvs produtoTotvs
        - Reuniao reuniao

        + AnaliseReuniao(Reuniao reuniao)
        + AnaliseReuniao(AnaliseReuniaoDTO analiseReuniaoDTO, Reuniao reuniao)
        + getAssunto() String
        + getSentimentoReuniao() SentimentoReuniao
        + getRiscoCancelamento() RiscoCancelamento
        + getSegmentoCliente() SegmentoCliente
        + getProdutoTotvs() ProdutoTotvs
        + getReuniao() Reuniao
        + toString() String
        + equals(Object o) boolean
    }

    class TipoColaborador {
        <<enumeration>>
        VENDEDOR,
        GERENTE_VENDAS

        - String descricao
    
        + TipoColaborador(String descricao)
        + getDescricao() String
    }

    class SentimentoReuniao {
        <<enumeration>>
        POSITIVO,
        NEUTRO,
        NEGATIVO

        - String descricao
        - Double valor

        + SentimentoReuniao(String descricao, Double valor)
        
        + fromDescricao(String descricao) SentimentoReuniao
        + fromValor(Double valor) SentimentoReuniao

        + getDescricao() String
        + getValor() Double
    }

    class RiscoCancelamento {
        <<enumeration>>
        MUITO_ALTO,
        ALTO,
        MODERADO,
        BAIXO

        - String descricao
        - Double valor

        + RiscoCancelamento(String descricao, Double valor)

        + fromDescricao(String descricao) RiscoCancelamento
        + fromValor(Double valor) RiscoCancelamento

        + getDescricao() String
        + getValor() Double
    }

    class SegmentoCliente {
        <<enumeration>>
        SAUDE,
        DISTRIBUICAO,
        MANUFATURA,
        SERVICOS,
        CONSTRUCAO_E_PROJETOS,
        EDUCACIONAL,
        AGROINDUSTRIA,
        LOGISTICA,
        SUPERMERCADOS,
        VAREJO,
        NAO_IDENTIFICADO

        - String descricao

        + SegmentoCliente(String descricao)

        + fromDescricao(String descricao) SegmentoCliente

        + getDescricao() String
    }

    class ProdutoTotvs {
        <<enumeration>>
        PROTHEUS,
        RM,
        DATASUL,
        LOGIX,
        RH_CLOCK_IN,
        RH_PERFORMANCE,
        RD_STATION,
        TOTVS_ASSINATURA,
        TOTVS_ANALYTICS,
        FLUIG,
        TOTVS_AUTOMACAO_FISCAL,
        EDUCACAO,
        NAO_IDENTIFICADO

        - String descricao
        - String categoria

        + ProdutoTotvs(String descricao, String categoria)

        + fromDescricao(String descricao) ProdutoTotvs

        + getDescricao() String
        + getCategoria() String
    }

    BaseEntity <|-- Reuniao
    BaseEntity <|-- AnaliseReuniao
    BaseEntity <|-- Colaborador

    Colaborador <|-- Vendedor
    Colaborador <|-- GerenteVendas

    Colaborador ..> TipoColaborador

    Reuniao "1" --> "1" Colaborador : uploadedBy

    AnaliseReuniao "1" --> "1" Reuniao : reuniao

    AnaliseReuniao -- SentimentoReuniao
    AnaliseReuniao -- RiscoCancelamento
    AnaliseReuniao "1" -- "1" SegmentoCliente
    AnaliseReuniao "1" -- "1" ProdutoTotvs